# propeller_design_tools

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt  setup.cfg
propeller_design_tools/: __init__.py  airfoil.py  funcs.py  propeller.py  radialstation.py  user_io.py  user_settings.py
src/propeller_design_tools/: __init__.py
tests/: example2_radialstation_creation.py  example3_prop_creation.py  example4_stl_generation.py  scratch_tester.py  test1.py  test3.py
