[metadata]
name = propeller_design_tools
version = 0.0.23
author = Jacob Bronson
author_email = jakebronson89@gmail.com
description = Python 3.7 package that provides exactly what it sounds like by automating usage of the GPL-licensed CLI-utilities XFOIL and XROTOR.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/helloDestroyerOfWorlds/propeller_design_tools.git
project_urls =
    Bug Tracker = https://github.com/helloDestroyerOfWorlds/propeller_design_tools/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3
    Operating System :: Microsoft :: Windows
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
